New TWLTransfer logic, bug fix and update translations

--- a/i18n/en.po
+++ b/i18n/en.po
@@ -149,12 +149,8 @@ msgid "关闭"
 msgstr "Close"
 
 #: TWLMagician.py:721
-msgid "接下来请选择TWLTransfer目标镜像文件\n请注意: TWLCFG会被重置"
-msgstr "Now please select TWLTransfer image file.\nNote: TWLCFG will be reset!"
-
-#: TWLMagician.py:722
-msgid "镜像文件"
-msgstr "Image file"
+msgid "接下来将自动下载目标区域的TWLTransfer镜像文件\n请注意: TWLCFG会被重置"
+msgstr "Now downloading TWLTransfer image file for destination region.\nNote: TWLCFG will be reset!"
 
 #: TWLMagician.py:735
 msgid "此功能需要以管理员权限运行本工具"
@@ -654,3 +650,12 @@ msgstr "The download or installation of the update has failed. Exiting."
 
 msgid "当前为最新版本!"
 msgstr "This is the latest version!"
+
+msgid "选择目标系统区域:"
+msgstr "Select the destination system region:"
+
+msgid "正在下载 TWLTransfer 镜像文件: "
+msgstr "Downloading the TWLTransfer image file: "
+
+msgid "错误: 无法下载 TWLTransfer 镜像文件"
+msgstr "Error: Could not get TWLTransfer image file"
